--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "clean": "rm -rf dist",
     "lint": "eslint --ext .ts,.js src tests",
     "lint:fix": "eslint --ext .ts src --fix",
-    "prepare-husky": "husky install project/.husky",
+    "prepare": "husky install project/.husky",
     "lint-staged": "lint-staged"
   },
   "keywords": [],
