--- a/package.json
+++ b/package.json
@@ -13,18 +13,21 @@
     "lint": "eslint --ext .ts,.js src tests",
     "lint:fix": "eslint --ext .ts src --fix",
     "prepare": "husky install .husky",
-    "lint-staged": "lint-staged"
+    "lint-staged": "lint-staged",
+    "test": "bash scripts/run-test-local",
+    "show-report": "npx playwright show-report"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@playwright/test": "^1.29.2",
     "@swc/cli": "^0.1.59",
     "@swc/core": "^1.3.24",
+    "axios": "^1.2.2",
     "cls-hooked": "^4.2.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.28.0"
@@ -34,7 +37,6 @@
     "@commitlint/config-conventional": "^17.4.2",
     "@types/cls-hooked": "^4.3.3",
     "@types/express": "^4.17.15",
-    "@types/jsonwebtoken": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
     "chokidar": "^3.5.3",
